--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div data-silex-type="image-element" class="editable-style silex-id-1496162110372-8 image-element close-btn" style=""><img src="assets/hamburger2-close-white.png" class=""></div>
         </div>
     </div><div data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element show-when-not-active prevent-resizable" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" style=""><a href="index.html" data-silex-type="image-element" class="editable-style silex-id-1496137172968-2 image-element page-link-active"><img src="assets/logo.png" class=""></a><div data-silex-type="container-element" class="editable-style silex-id-1545060115782-18 container-element hide-on-desktop" style=""></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" style="">
 
 
 
@@ -209,7 +209,7 @@
 
 
 
-        <div data-silex-type="image-element" class="editable-style silex-id-1496160336487-5 image-element open-btn"><img src="assets/hamburger2.png" class=""></div></div>
+        <a href="index.html" data-silex-type="image-element" class="editable-style silex-id-1496137172968-2 image-element page-link-active"><img src="assets/logo.png" class=""></a><div data-silex-type="container-element" class="editable-style silex-id-1545060115782-18 container-element hide-on-desktop" style=""></div><div data-silex-type="image-element" class="editable-style silex-id-1496160336487-5 image-element open-btn"><img src="assets/hamburger2.png" class=""></div></div>
     </div><div data-silex-type="container-element" class="container-element editable-style silex-id-1474394621033-3 section-element prevent-resizable page-home-page paged-element paged-element-visible" style="">
         <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1474394621032-2 container-element website-width">
 
