--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
             <div data-silex-type="image-element" class="editable-style silex-id-1496162110372-8 image-element close-btn" style=""><img src="assets/hamburger2-close-white.png" class=""></div>
         </div>
     </div><div data-silex-type="container-element" class="container-element editable-style silex-id-1478366444112-1 section-element show-when-not-active prevent-resizable" style="">
-        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" style=""><a href="index.html" data-silex-type="image-element" class="editable-style silex-id-1496137172968-2 image-element"><img src="assets/logo.png" class=""></a><div data-silex-type="container-element" class="editable-style silex-id-1545060115782-18 container-element hide-on-desktop" style=""></div>
+        <div data-silex-type="container-element" class="editable-style silex-element-content silex-id-1478366444112-0 container-element website-width" style="">
 
 
 
@@ -209,18 +209,14 @@
 
 
 
-        <div data-silex-type="image-element" class="editable-style silex-id-1496160336487-5 image-element open-btn"><img src="assets/hamburger2.png" class=""></div></div>
+        <a href="index.html" data-silex-type="image-element" class="editable-style silex-id-1496137172968-2 image-element"><img src="assets/logo.png" class=""></a><div data-silex-type="container-element" class="editable-style silex-id-1545060115782-18 container-element hide-on-desktop" style=""></div><div data-silex-type="image-element" class="editable-style silex-id-1496160336487-5 image-element open-btn"><img src="assets/hamburger2.png" class=""></div></div>
     </div><div data-silex-type="container-element" class="container-element editable-style silex-id-1496169913595-60 section-element prevent-resizable page-product-details paged-element page-about paged-element-visible">
         <div data-silex-type="container-element" class="editable-style silex-id-1496169913594-59 container-element silex-element-content website-width" style=""></div>
     </div><div data-silex-type="container-element" class="container-element editable-style silex-id-1496169474610-49 section-element prevent-resizable page-product-details paged-element page-about paged-element-visible">
         <div data-silex-type="container-element" class="editable-style silex-id-1496169474609-48 container-element silex-element-content website-width">
             <div data-silex-type="text-element" class="editable-style silex-id-1496169503613-50 text-element">
                 <div class="silex-element-content normal">
-                    <h2 class="heading2">Ground round lorem cupim</h2>
-                    <p class="normal"><b>www.silex.me / December 6</b></p>
-                    <p class="normal">
-                        <font size="4" color="#666666">Ex porchetta consectetur eu filet mignon mollit voluptate id. Ribeye veniam chicken prosciutto pork. Minim venison turkey, sint pork belly fatback ribeye quis bacon. Aliquip doner ex salami non venison jowl. Deserunt pariatur quis,
-                            pastrami mollit adipisicing pork belly nostrud laboris shank.&nbsp;</font><span style="color: rgb(102, 102, 102); font-size: large; line-height: 2;">Frankfurter leberkas id porchetta doner aute ex sausage alcatra.  Ipsum sed nulla, dolore irure burgdoggen andouille pork in minim aliquip magna.  Prosciutto turducken ea kielbasa.  Pancetta rump labore incididunt short loin fugiat.  Laboris sint sed aliqua.  Ham beef enim porchetta salami spare ribs tenderloin.</span></p>
+                    <h2>HIHIHIHIHI<br></h2><p><br></p>
                 </div>
             </div>
         </div>
